prepare for proofreading

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -146,7 +146,7 @@
 	year 		= {1990}
 }
 
-@masterthesis{Biagini2015,
+@mastersthesis{Biagini2015,
 	title 	= {Glossario cartaceo e glossario elettronico durante l'interpretazione simultanea: {U}no studio comparativo},
 	author 		= {Biagini, Giulio},
 	publisher 		= {{U}niversità di {T}rieste},
@@ -319,7 +319,7 @@
 	year 		= {2001}
 }
 
-@masterthesis{DeMerulis2013,
+@mastersthesis{DeMerulis2013,
 	title 		= {L’uso di InterpretBank per la preparazione di una conferenza sul trattamento delle acque reflue: {L}ossario terminologico e contributo sperimentale},
 	author 		= {De Merulis, Gianpiero},
 	publisher 		= {{U}niversità di {B}ologna},
@@ -451,7 +451,7 @@
 	year = {2008}
 }
 
-@masterthesis{Gacek2015,
+@mastersthesis{Gacek2015,
 	author 		= {Gacek, Michael},
 	title 		= {{S}oftwarelösungen für {D}olmetscher{I}nnen},
 	publisher 		= {University of {V}ienna},
@@ -521,7 +521,7 @@
 	year 		= {2009}
 }
 
-@masterthesis{Gigliobianco2017,
+@mastersthesis{Gigliobianco2017,
 	author 		= {Gigliobianco, Sebastiano},
 	title 		= {{D}igitalisierung von {A}rbeitsplätzen von {K}onferenzdolmetschern: {S}kizzierung eines modellhaften {A}ufbaus eines zukunftsfähigen {A}rbeitsplatzes von {K}onferenzdolmetschern unter {B}erücksichtigung aktueller technologischer {E}ntwicklungen anhand eines {V}ersuchs mit praktizierenden {P}robanden},
 	address	= {{S}prachen und {D}olmetscher {I}nstitut {M}ünchen},
@@ -964,7 +964,8 @@
 @book{Moser-Mercer2003,
 	title 		= {Remote interpreting: {A}ssessment of human factors and performance parameters},
 	author 		= {Moser-Mercer, Barbara},
-	note 		= {Retrieved on 31 October 2017 from \url{https://aiic.net/page/1125/remote-interpreting-assessment-of-human-factors-and-pe/lang/1 }},
+	note 		= {Retrieved on 31 October 2017 from \url{https://aiic.net/page/1125/remote-interpreting-assessment-of-human-factors-and-pe/lang/1
+}},
 	publisher 	= {Communicate! Summer 2003},
 	year 		= {2003}
 }
@@ -1061,7 +1062,7 @@
 	year 		= {2000}
 }
 
-@masterthesis{Prandi2015a,
+@mastersthesis{Prandi2015a,
 	address 	= {{U}niversità di {B}ologna},
 	author 		= {Prandi, Bianca},
 	publisher 		= {{U}niversità di {B}ologna},
