--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -249,7 +249,7 @@
 @mastersthesis{Gigliobianco2017,
 	address = {{{S}}prachen und {{D}}olmetscher {{I}}nstitut {{M}}ünchen},
 	author = {Gigliobianco, Sebastiano},
-	title = {{{D}}igitalisierung von {{A}}rbeitsplätzen von {{K}}onferenzdolmetschern: {{S}}kizzierung eines modellhaften {{A}}ufbaus eines zukunftsfähigen {{A}}rbeitsplatzes von {{K}}onferenzdolmetschern unter {{B}}erücksichtigung aktueller technologischer {{{E}}}ntwicklungen anhand eines {{V}}ersuchs mit praktizierenden {{P}}robanden},
+	title = {{{{D}}igitalisierung von {{A}}rbeitsplätzen von {{K}}onferenzdolmetschern: {{S}}kizzierung eines modellhaften {{A}}ufbaus eines zukunftsfähigen {{A}}rbeitsplatzes von {{K}}onferenzdolmetschern unter {{B}}erücksichtigung aktueller technologischer {{{E}}}ntwicklungen anhand eines {{V}}ersuchs mit praktizierenden {{P}}robanden}},
 	year = {2017}
 }
 
@@ -359,8 +359,7 @@
 	address = {Abingdon/New York},
 	author = {Seeber, Kilian G.},
 	booktitle = {The {Routledge} Handbook of Interpreting},
-	editor = {Mikkelson, Holly and Jourdenais, Renée},
-	pages = {\biberror{no pages}},
+	editor = {Mikkelson, Holly and Jourdenais, Renée}, 
 	publisher = {Routledge},
 	title = {Simultaneous Interpreting},
 	year = {2015}
@@ -447,7 +446,7 @@
 @incollection{Merlini2009,
 	address = {Manchester},
 	author = {Merlini, Raffaela},
-	booktitle = {Interpreting and Translating in Public Service Settings - Policy, Practice, Pedagogy},
+	booktitle = {Interpreting and Translating in Public Service Settings: {{P}}olicy, Practice, Pedagogy},
 	editor = {{de Pedro Ricoy}, Raquel and Perez, {Isabelle Anne} and Wilson, Christine},
 	pages = {89--114},
 	publisher = {St Jerome},
@@ -469,7 +468,7 @@
 @incollection{Mason2009,
 	address = {Manchester},
 	author = {Mason, Ian},
-	booktitle = {Interpreting and Translation in Public Service Settings - Policy, Practice, Pedagogy},
+	booktitle = {Interpreting and Translation in Public Service Settings: {{P}}olicy, Practice, Pedagogy},
 	editor = {{de Pedro Ricoy}, Raquel and Perez, {Isabelle Anne} and Wilson, Christine},
 	pages = {52--73},
 	publisher = {St Jerome},
@@ -519,7 +518,7 @@
 	editor = {Kadric, Midra and Kaindl, Klaus and Pöchhacker, Franz},
 	pages = {291--302},
 	publisher = {Stauffenburg Festschriften},
-	title = {Tagungsort Genf/Nairobi/Wien: {{Z}}u einigen Aspekten des Teledolmetschens},
+	title = {{Tagungsort Genf/Nairobi/Wien: {{Z}}u einigen Aspekten des Teledolmetschens}},
 	year = {2000}
 }
 
@@ -537,7 +536,7 @@
 @incollection{Grbic2011,
 	address = {Manchester},
 	author = {Grbic, Nadja},
-	booktitle = {Triadic Exchanges - Studies in Dialogue Interpreting},
+	booktitle = {Triadic Exchanges: {{S}}tudies in Dialogue Interpreting},
 	editor = {Mason, Ian},
 	pages = {149--171},
 	publisher = {St Jerome},
@@ -627,7 +626,7 @@
 @incollection{Causo2011,
 	address = {Guilford},
 	author = {Causo, José Esteban},
-	booktitle = {{Videoconference and Remote Interpreting in Criminal Proceedings}},
+	booktitle = {Videoconference and Remote Interpreting in Criminal Proceedings},
 	editor = {Braun, Sabine and Taylor, Judith L.},
 	pages = {\biberror{no pages}},
 	publisher = {University of Surrey},
@@ -640,8 +639,7 @@
 	address = {Abingdon/New York},
 	author = {Braun, Sabine},
 	booktitle = {{Routledge} Handbook of Interpreting},
-	editor = {Mikkelson, Holly and Jourdenais, Renée},
-	pages = {\biberror{no pages}},
+	editor = {Mikkelson, Holly and Jourdenais, Renée}, 
 	publisher = {Routledge},
 	title = {Remote Interpreting},
 	year = {2015}
@@ -746,7 +744,7 @@ im Gesundheitsbereich}},
 	series = {InterPartes},
 	publisher = {Martin Meidenbauer},
 	sortname = {Andres, Dorte and Falk, Stefanie},
-	title = {Information and Communication Technologies ({{ICT}}) in Interpreting - {{R}}emote and Telephone Interpreting},
+	title = {Information and Communication Technologies ({{ICT}}) in Interpreting: {{R}}emote and Telephone Interpreting},
 	year = {2009}
 }
 
@@ -887,7 +885,7 @@ im Gesundheitsbereich}},
 	address = {Berlin},
 	author = {Korak, Christina},
 	publisher = {Frank \& Timme},
-	title = {Remote interpreting via {{S}}kype: {{A}}nwendungsmöglichkeiten von {{VoIP}}-{{S}}oftware im {{B}}ereich {{C}}ommunity {{I}}nterpreting - {{C}}ommunicate everywhere?},
+	title = {{Remote interpreting via {{S}}kype: {{A}}nwendungsmöglichkeiten von {{VoIP}}-{{S}}oftware im {{B}}ereich {{C}}ommunity {{I}}nterpreting: {{C}}ommunicate everywhere?}},
 	year = {2010}
 }
 
@@ -967,8 +965,7 @@ im Gesundheitsbereich}},
 	author = {Braun, Sabine},
 	urldate  = {2016-11-25},
 	url = {https://www.academia.edu/19593187/2013_AVIDICUS_2_final_research_report}, 
-	title = {{{AVIDICUS}} 2 -- {{A}}ction 2 research report: {{A}}ssessment of video-mediated interpreting in the criminal justice system},
-	urldate = 3187/2013,
+	title = {{{AVIDICUS}} 2 -- {{A}}ction 2 research report: {{A}}ssessment of video-mediated interpreting in the criminal justice system}, 
 	year = {2013}
 }
 
@@ -1003,7 +1000,7 @@ im Gesundheitsbereich}},
 	journal = {Zeitschrift Für Translationswissenschaft Und Fachkommunikation},
 	number = {1},
 	pages = {179--201},
-	title = {Zur Eignung Simultanfähiger Terminologiesysteme für das Konferenzdolmetschen},
+	title = {{Zur Eignung Simultanfähiger Terminologiesysteme für das Konferenzdolmetschen}},
 	volume = {8},
 	year = {2015}
 }
@@ -1450,7 +1447,7 @@ im Gesundheitsbereich}},
 	journal = {Journal of Information Technology},
 	number = {2},
 	pages = {111--123},
-	title = {History and {{IS}} - {{B}}roadening our view and understanding: {{A}}ctor-Network Theory as a methodology},
+	title = {History and {{IS}}: {{B}}roadening our view and understanding: {{A}}ctor-Network Theory as a methodology},
 	volume = {28},
 	year = {2013}
 }
