--- a/localmetadata.tex
+++ b/localmetadata.tex
@@ -1,6 +1,7 @@
 \title{Interpreting and technology}  
-\BackBody{Since the 1970s, the notion of a lexeme, an abstract lexical unit identifying what is common to a set of words belonging to the same inflectional paradigm, has become a cornerstone of theoretical thinking on morphology and a standard tool for description. The present volume collects papers that crucially use, discuss or question the lexeme in the context of contemporary morphology, with particular emphasis on its place in the description of word formation through the concept of a \emph{Lexeme Formation Rule}. 
-It will be of interest to any descriptive linguist, theoretical linguist, or psycholinguist with an interest in morphology and its interface with syntax and lexical semantics. }
+\BackBody{Unlike other professions, the impact of information and communication technology on interpreting has been moderate so far. However, recent advances in the areas of remote, computer-assisted, and, most recently, machine interpreting, are gaining the interest of both researchers and practitioners. This volume aims at exploring key issues, approaches and challenges to the interplay of interpreting and technology, an area that is still underrepresented in the field of Interpreting Studies. The contributions to this volume cover topics in the area of computer-assisted and remote interpreting, both in the conference as well as in the court setting, and report on experimental studies.
+
+}
 \typesetter{Change typesetter in localmetadata.tex}
 %\proofreader{Change proofreaders in localmetadata.tex}
 \author{Claudio Fantinuoli}
@@ -9,6 +10,5 @@ It will be of interest to any descriptive linguist, theoretical linguist, or psy
 \renewcommand{\lsISBNhardcover}{000-0-000000-00-0}
 \renewcommand{\lsISBNsoftcover}{000-0-000000-00-0} 
 \renewcommand{\lsSeries}{tmnlp} % use lowercase acronym, e.g. sidl, eotms, tgdi
-\renewcommand{\lsSeriesNumber}{42} %will be assigned when the book enters the proofreading stage
-% \renewcommand{\lsURL}{http://langsci-press.org/catalog/book/000} % contact the coordinator for the right number
+\renewcommand{\lsSeriesNumber}{} %will be assigned when the book enters the proofreading stage 
 \renewcommand{\lsID}{209} 
