--- a/localpackages.tex
+++ b/localpackages.tex
@@ -51,3 +51,4 @@
 \robustify\bfseries % For detect weight to work
 
 \usepackage{langsci/styles/langsci-gb4e} 
+\usepackage{langsci/styles/langsci-optional} 
