--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,8 @@
 \documentclass[output=book,modfonts,nonflat,collection,collectionchapter
 		,colorlinks,citecolor=brown
 % 		,draft
-                ,draftmode
-		,showindex
+%                 ,draftmode
+% 		,showindex
 	      % ,multiauthors
 	      % ,nobabel
 		  ]{langsci/langscibook}                              
@@ -38,7 +38,7 @@
 %%%             Chapters                         %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
-%  \includepaper{chapters/00}
+ \includepaper{chapters/00}
  \includepaper{chapters/01} 
  \includepaper{chapters/02} 
  \includepaper{chapters/03} 
