--- a/langsci/seriesinfo/algad-info.tex
+++ b/langsci/seriesinfo/algad-info.tex
@@ -4,16 +4,15 @@
 \bigskip
 
 Chief Editor:    Adams Bodomo \\
-Editors:    Ken Hiraiwa,    Firmin Ahoua
+Editors:    Ken Hiraiwa,    Firmin Ahoua 
 
 \bigskip
 
 In this series:
 
 \begin{enumerate}
-\item Schrock, Terrill B. The Ik language: Dictionary and grammar sketch.
-\item Brindle, Jonathan. A dictionary and grammatical outline of Chakali.
-\item Friesen, Dianne. Moloko.
+\item Brindle, Jonathan. A dictionary and grammatical outline of Chakali
+\item Friesen, Dianne. A grammar of Moloko.
 \end{enumerate}
 
 
