--- a/langsci/styles/langsci-optional.sty
+++ b/langsci/styles/langsci-optional.sty
@@ -152,6 +152,13 @@
 \fi%
 #3)}\nopagebreak[4]\ignorespaces}
 
+\newcommand{\langinfoverb}[3]{{\upshape #1~(% langinfo without index marker
+\ifx\\#2\\%
+\else%
+#2;
+\fi%
+#3)}\nopagebreak[4]\ignorespaces}
+
  
 \newcommand{\fittable}[1]{\resizebox{\textwidth}{!}{#1}}
 
@@ -195,7 +202,7 @@
 %no hyphenation left alingned
 \newcolumntype{Q}{>{\raggedright\arraybackslash}X}
 %no hyphenation right aligned
-\newcolumntype{S}{>{\raggedleft\arraybackslash}X}
+\newcolumntype{Y}{>{\raggedleft\arraybackslash}X}
 %no hyphenation centered
 \newcolumntype{C}{>{\centering\arraybackslash}X}
 %no hyphenation fixed width
@@ -302,6 +309,33 @@
 \newenvironment{modquote}[1][6mm]% slightly less indented quote for hyphenation issues
   {\list{}{\leftmargin=#1\rightmargin=0mm}\item[]}%
   {\endlist}
+  
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%% Experimental feature for pointing out moving things. %%%%
+%%%% Buggy? Write to: kopeckyf@hu-berlin.de               %%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\usetikzlibrary{arrows,arrows.meta}
+\newcounter{lsConnectTempGroup}
+\NewDocumentCommand\ConnectTail{m O{\thelsConnectTempGroup}}{%read: mandatory arg #1, optional argument #2 with the current group counter as its default value.
+    \edef\lsConnectTempPosition{#2}%\edef expands the argument, which means reading the current value of the counter.
+    {\tikz[remember picture,
+           anchor=base, baseline,
+           inner xsep=0pt, 
+           inner ysep=-.5ex]\node (ConnectTempTail\lsConnectTempPosition) {\strut{}#1};}%\strut for baseline
+}
+\NewDocumentCommand\ConnectHead{s O{1ex} m O{\thelsConnectTempGroup}}{%read: star #1, optional argument (distance of arrow from text= std. one x-height), mand. arg. (node text), optional argument #2, the group specifier
+    \edef\lsConnectTempPosition{#4}%
+    \stepcounter{lsConnectTempGroup}%We have a match, let's update the group counter   
+    {\tikz[remember picture,
+           anchor=base, baseline, 
+           inner xsep=0pt, 
+           inner ysep=-.5ex] \node (ConnectTempHead\lsConnectTempPosition) {\strut{}#3};%
+     \tikz[remember picture] \draw[% we have a tail and a head, let's bring them together
+                                \IfBooleanTF#1{{Triangle[]}-}{-{Triangle[]}},% Check if the starred version is used. The starred version is right->left, the normal version left->right
+                                overlay] (ConnectTempTail\lsConnectTempPosition.south) -- ++(0,-#2) -| (ConnectTempHead\lsConnectTempPosition.south);
+    }%
+} 
+
   
 %%%%%%%%%%%%%%%%%%%%
 %%%%           %%%%%
