correct retrieval dates

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1,7 +1,8 @@
 @misc{AIIC2000,
 	author 	    = {AIIC},
 	title       = {Code for the use of new technologies in conference interpretation},
-	note        = {Retrieved on 31. October 2017 from \url{http://www.staff.uni-mainz.de/fantinuo/class/files/cai/aiic_code_interpreting\%20technologies.pdf}},
+	urldate        = {2017-10-31},
+	url = {http://www.staff.uni-mainz.de/fantinuo/class/files/cai/aiic_code_interpreting\%20technologies.pdf},
 	year        = {2000}
 }
 
@@ -87,7 +88,7 @@
 @phdthesis{Fowler2012,
 	address = {Birmingham},
 	author = {Fowler, Yvonne},
-	note = {Retrieved from \url{http://eprints.aston.ac.uk/19442/1/Studentthesis-2013.pdf}},
+	url = {http://eprints.aston.ac.uk/19442/1/Studentthesis-2013.pdf},
 	school = {Aston University},
 	title = {Non-{English}-speaking defendants in the Magistrates' Court},
 	year = {2012}
@@ -104,7 +105,8 @@
 @phdthesis{Devaux2017b,
 	address = {Salford},
 	author = {Devaux, Jérôme},
-	note = {Retrieved on 1 Mai 2018 from \url{https://open.academia.edu/JeromeDevaux}},
+	urldate = {2018-05-01},
+	url = {https://open.academia.edu/JeromeDevaux},
 	school = {University of Salford},
 	title = {Technologies in interpreter-mediated criminal court hearings an actor-network theory account of the interpreter’s perception of her role-space},
 	year = {2017}
@@ -118,13 +120,15 @@
 
 @misc{TechTarget2017,
 	author = {{TechTarget Network}},
-	note = {Retrieved on 31 October 2017 from \url{http://searchunifiedcommunications.techtarget.com/definitions/page/7}},
+	urldate = {2017-10-31},
+	url= {http://searchunifiedcommunications.techtarget.com/definitions/page/7},
 	year = {2017}
 }
 
 @misc{Service2016,
-	author = {Her Majesty's Courts and Tribunals Service},
-	note = {Retrieved on 22 January 2017 from \url{https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/536080/hm-courts-and-tribunals-service-annual-report-and-accounts-2015-16.pdf}},
+	author = {{Her Majesty's Courts and Tribunals Service}},
+	urldate = {2017-01-22},
+	url = {https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/536080/hm-courts-and-tribunals-service-annual-report-and-accounts-2015-16.pdf},
 	title = {Annual report and accounts 2015-16},
 	year = {2016}
 }
@@ -155,14 +159,16 @@
 
 @misc{Plotnikoff2000,
 	author = {Plotnikoff, Joyce and  Woolfson, Richard},
-	note = {Retrieved on 12 November 2016 from \url{http://lexiconlimited.co.uk/wp-content/uploads/2013/01/Videolink-Crown.pdf}},
+	urldate = {2016-11-12},
+	url= {http://lexiconlimited.co.uk/wp-content/uploads/2013/01/Videolink-Crown.pdf},
 	title = {Evaluation of video link pilot project at {Manchester} Crown Court: {{F}}inal Report},
 	year = {2000}
 }
 
 @misc{Plotnikoff1999,
 	author = {Plotnikoff, Joyce and  Woolfson, Richard},
-	note = {Retrieved on 12 November 2016 from \url{http://lexiconlimited.co.uk/wp-content/uploads/2013/01/Videolink-magistrates.pdf}},
+	urldate = {2016-11-12},
+	url = {http://lexiconlimited.co.uk/wp-content/uploads/2013/01/Videolink-magistrates.pdf},
 	title = {Preliminary hearings: {{V}}ideo links evaluation of pilot projects},
 	year = {1999}
 }
@@ -194,7 +200,8 @@
 @misc{Europarl2001,
 	address = {Brussels},
 	author = {{European Parliament Interpretation Directorate}},
-	note = {Retrieved on 29 December 2017 from \url{http://www.europarl.europa.eu/interp/remote_interpreting/ep_report1.pdf}},
+	urldate = {2017-12-29},
+	url = {http://www.europarl.europa.eu/interp/remote_interpreting/ep_report1.pdf},
 	title = {Report on Remote Interpretation Test, 22-25 {January} 2001},
 	year = {2001}
 }
@@ -215,25 +222,29 @@
 
 @misc{Bail2008,
 	author = {Bail for Immigration Detainees and the British Refugee Council},
-	note = {Retrieved on 15 April 2012 from \url{http://www.refugeecouncil.org.uk/assets/0001/7078/RC_and_BID_report_on_Bail_hearings_and_video_links_Mar_08}},
+	urldate = {2012-04-15},
+	url = {http://www.refugeecouncil.org.uk/assets/0001/7078/RC_and_BID_report_on_Bail_hearings_and_video_links_Mar_08},
 	title = {A monitoring exercise by Bail for Immigration Detainees and the Refugee Council: {{I}}mmigration bail hearings by video link},
 	year = {2008}
 }
 
 @misc{AVIDICUS3,
-	note = {Retrieved on 12 May 2018 from \url{http://wp.videoconference-interpreting.net/?page_id=154}},
+	urldate = {2018-05-12},
+	url = {http://wp.videoconference-interpreting.net/?page_id=154},
 	title = {{{AVIDICUS}} Project 3},
 	year = {2014-2016}
 }
 
 @misc{AVIDICUS2,
-	note = {Retrieved on 12 May 2018 from \url{http://wp.videoconference-interpreting.net/?page_id=13}},
+	urldate = {2018-05-12},
+	url = {http://wp.videoconference-interpreting.net/?page_id=13},
 	title = {{{AVIDICUS}} Project 2},
 	year = {2011-2013}
 }
 
 @misc{AVIDICUS1,
-	note = {Retrieved on 12 May 2018 from \url{http://wp.videoconference-interpreting.net/?page_id=13}},
+	urldate = {2018-05-12},
+	url = {http://wp.videoconference-interpreting.net/?page_id=13},
 	title = {{{AVIDICUS}} Project 1},
 	year = {2008-2011}
 }
@@ -775,7 +786,8 @@ im Gesundheitsbereich}},
 
 @book{UNESCO1987, 
 	author = {UNESCO},
-	note = {Retrieved on 12 May 2018 from \url{http://unesdoc.unesco.org/images/0007/000732/073286eo.pdf}},
+	urldate = {2018-05-12},
+	url = {http://unesdoc.unesco.org/images/0007/000732/073286eo.pdf},
 	 title = {Management of Interpretation Services in the {United Nations} System. {{R}}eport of the {United Nations} Joint Inspection Unit},
 	year = {1987}
 }
@@ -860,7 +872,7 @@ im Gesundheitsbereich}},
 @misc{Llewellyn-Jones2011, 
 	author = {Llewellyn-Jones, Peter and Lee, Robert},
 	urldate = {2016-12-19},
-	url = {http://clok.uclan.ac.uk/5031/1/Lee\%20and\%20L-J\%202011.pdf}, 
+	url = {http://clok.uclan.ac.uk/5031/1/Lee%20and%20L-J%202011.pdf}, 
 	title = {Re-visiting role: {{A}}rguing for a multi-dimensional analysis of interpreter behaviour},
 	year = {2011}
 }
@@ -957,7 +969,7 @@ im Gesundheitsbereich}},
 	author = {Braun, Sabine and Davitti, Elena and Dicerto, Sara},
 	urldate = {2016-11-18},
 	url = {http://www.videoconference-interpreting.net/wp-content/uploads/2016/11/AVIDICUS3_Research_Report.pdf},
-	title = {The use of videoconferencing in proceedings conducted with the assistance of an interpreter. {{R}}esearch report},
+	title = {The use of videoconferencing in proceedings conducted with the assistance of an interpreter},
 	year = {2016}
 }
 
