--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1,3 +1,176 @@
+@inproceedings{muller_lecture_2016,
+	title = {Lecture {Translator} - {Speech} translation framework for simultaneous lecture translation},
+	url = {http://aclweb.org/anthology/N16-3017},
+	doi = {10.18653/v1/N16-3017},
+	language = {en},
+	urldate = {2017-10-04},
+	publisher = {Association for Computational Linguistics},
+	author = {Müller, Markus and Nguyen, Thai Son and Niehues, Jan and Cho, Eunah and Krüger, Bastian and Ha, Thanh-Le and Kilgour, Kevin and Sperber, Matthias and Mediani, Mohammed and Stüker, Sebastian and Waibel, Alex},
+	year = {2016},
+	pages = {82--86},
+}
+
+@inproceedings{stewart_automatic_2018,
+	title = {Automatic {Estimation} of {Simultaneous} {Interpreter} {Performance}},
+	author = {Stewart, Craig and Vogler, Nikolai and Hu, Junjie and Boyd-Graber, Jordan and Neubig, Graham},
+	year = {2018},
+	keywords = {cai},
+	booktitle = {ACL 2018}
+}
+
+@book{neufeind_work_2018,
+	address = {Lanham, MD},
+	title = {Work in the digital age: challenges of the fourth industrial revolution},
+	isbn = {978-1-78660-906-9 978-1-78660-907-6},
+	shorttitle = {Work in the digital age},
+	publisher = {Policy Network},
+	editor = {Neufeind, Max and O'Reilly, Jacqueline and Ranft, Florian},
+	year = {2018}
+}
+
+@book{takeda_new_2016,
+	address = {Amsterdam ; Philadelphia},
+	series = {Benjamins {Translation} {Library}},
+	title = {New insights in the history of interpreting},
+	isbn = {978-90-272-5867-0},
+	number = {volume 122},
+	publisher = {John Benjamins Publishing Company},
+	editor = {Takeda, Kayoko and Baigorri Jalón, Jesús},
+	year = {2016},
+	keywords = {Translating and interpreting, History, Simultaneous interpreting}
+}
+
+@article{chang_conference_2018,
+	title = {Conference interpreting and knowledge acquisition: {How} professional interpreters tackle unfamiliar topics},
+	volume = {20},
+	issn = {1384-6647, 1569-982X},
+	shorttitle = {Conference interpreting and knowledge acquisition},
+	url = {http://www.jbe-platform.com/content/journals/10.1075/intp.00010.cha},
+	doi = {10.1075/intp.00010.cha},
+	language = {en},
+	number = {2},
+	urldate = {2018-10-04},
+	journal = {Interpreting},
+	author = {Chang, Chia-chien and Wu, Michelle Min-chia and Kuo, Tien-chun Gina},
+	month = sep,
+	year = {2018},
+	pages = {204--231},
+	file = {Chang et al. - 2018 - Conference interpreting and knowledge acquisition.pdf:D\:\\Dati\\Academics\\Bibliografia\\Papers\\Chang et al. - 2018 - Conference interpreting and knowledge acquisition.pdf:application/pdf}
+}
+@article{xu_corpus-based_2018,
+	title = {Corpus-based terminological preparation for simultaneous interpreting},
+	volume = {20},
+	issn = {1384-6647, 1569-982X},
+	url = {http://www.jbe-platform.com/content/journals/10.1075/intp.00002.xu},
+	doi = {10.1075/intp.00002.xu},
+	language = {en},
+	number = {1},
+	urldate = {2018-10-04},
+	journal = {Interpreting},
+	author = {Xu, Ran},
+	month = apr,
+	year = {2018},
+	pages = {29--58}
+}
+
+@book{finn_what_2017,
+	address = {Cambridge, MA},
+	title = {What algorithms want: imagination in the age of computing},
+	isbn = {978-0-262-03592-7 978-0-262-53604-2},
+	shorttitle = {What algorithms want},
+	publisher = {MIT Press},
+	author = {Finn, Ed},
+	year = {2017},
+	keywords = {Algorithms, Computers, Information technology, Social aspects}
+}
+
+@techreport{pernice_f-shaped_2017,
+	title = {F-{Shaped} {Pattern} of {Reading} on the {Web}: {Misunderstood}, {But} {Still} {Relevant} ({Even} on {Mobile})},
+	url = {https://www.nngroup.com/articles/f-shaped-pattern-reading-web-content/},
+	author = {Pernice, Kara},
+	year = {2017}
+}
+
+@inproceedings{zanettin_corpora_2002,
+	title = {Corpora in translation practice},
+	booktitle = {Proceedings of the {Workshop} {Language} {Resources} for {Translation} {Work} and {Research}},
+	author = {Zanettin, Federico},
+	year = {2002},
+	note = {bibtex: zanettin\_corpora\_2002}
+}
+
+@article{ross_print_2017,
+	title = {Print versus digital texts: understanding the experimental research and challenging the dichotomies},
+	volume = {25},
+	issn = {2156-7077},
+	shorttitle = {Print versus digital texts},
+	url = {https://journal.alt.ac.uk/index.php/rlt/article/view/1976},
+	doi = {10.25304/rlt.v25.1976},
+	number = {0},
+	urldate = {2018-10-04},
+	journal = {Research in Learning Technology},
+	author = {Ross, Bella and Pechenkina, Ekaterina and Aeschliman, Carol and Chase, Anne-Marie},
+	month = nov,
+	year = {2017}
+}
+
+@book{galimberti_i_2009,
+	address = {Milano},
+	edition = {1. ed. in "Serie bianca."},
+	series = {Serie bianca},
+	title = {I miti del nostro tempo},
+	isbn = {978-88-07-17162-8},
+	publisher = {G. Feltrinelli},
+	author = {Galimberti, Umberto},
+	year = {2009},
+	keywords = {Social psychology}
+}
+
+@book{besnier_homme_2012,
+	address = {Paris},
+	title = {L'homme simplifié: le syndrome de la touche étoile},
+	isbn = {978-2-213-66235-0},
+	shorttitle = {L'homme simplifié},
+	publisher = {Fayard},
+	author = {Besnier, Jean-Michel},
+	year = {2012},
+	keywords = {Social aspects, Technological innovations, Technology and civilization}
+}
+
+@article{pym_what_2011,
+	title = {What technology does to translating},
+	volume = {3},
+	copyright = {Authors who publish with this journal agree to the following terms:   Authors retain copyright and grant the journal right of first publication with the work simultaneously licensed under a  Creative Commons Attribution License  that allows others to share the work with an acknowledgement of the work's authorship and initial publication in this journal.  Authors are able to enter into separate, additional contractual arrangements for the non-exclusive distribution of the journal's published version of the work (e.g., post it to an institutional repository or publish it in a book), with an acknowledgement of its initial publication in this journal.  Authors are permitted and encouraged to post their work online (e.g., in institutional repositories or on their website) prior to and during the submission process, as it can lead to productive exchanges, as well as earlier and greater citation of published work (See  The Effect of Open Access ).},
+	issn = {1836-9324},
+	url = {http://www.trans-int.org/index.php/transint/article/view/121},
+	doi = {10.12807/t&i.v3i1.121},
+	abstract = {Abstract: The relation between technology and translating is part of the wider question of what technology does to language. It is now a key question because new translation technologies such as translation memories, data-based machine translation, and collaborative translation management systems, far from being added tools, are altering the very nature of the translator’s cognitive activity, social relations, and professional standing. Here we argue that technologies first affect memory capacity in such a way that the paradigmatic is imposed more frequently on the syntagmatic. It follows that the translating activity is enhanced in its generative moment, yet potentially retarded in the moment of selection, where the values of intuition and text flows become difficult to recuperate. The redeeming grace of new technologies may nevertheless lie in new modes of opening translation to the space of volunteer  translation, where humanizing dialogue can in a way enter the internal space of translation decisions. The regime of the paradigmatic may thus be embedded in new modes of social exchange, where translation becomes one of the five basic language skills.},
+	language = {en},
+	number = {1},
+	urldate = {2015-08-13},
+	journal = {Translation \& Interpreting},
+	author = {Pym, Anthony},
+	year = {2011},
+	keywords = {technology, translation, machine translation, translation memory.},
+	pages = {1--9},
+	file = {Pym - 2011 - What technology does to translating.pdf:D\:\\Dati\\Academics\\Bibliografia\\Papers\\Pym - 2011 - What technology does to translating.pdf:application/pdf}
+}
+
+@article{ursula_huws_logged_2016,
+	title = {Logged labour: a new paradigm of work organisation?},
+	volume = {10},
+	issn = {1745641X},
+	shorttitle = {Logged labour},
+	url = {http://www.jstor.org/stable/10.13169/workorgalaboglob.10.1.0007},
+	doi = {10.13169/workorgalaboglob.10.1.0007},
+	number = {1},
+	urldate = {2018-09-25},
+	journal = {Work Organisation, Labour \& Globalisation},
+	author = {{Ursula Huws}},
+	year = {2016},
+	pages = {7}
+}
+
 @misc{AIIC2000,
 	author 	    = {AIIC},
 	title       = {Code for the use of new technologies in conference interpretation},
@@ -74,7 +247,7 @@
 @incollection{Balogh2011,
 	address 	= {Guildford},
 	author 		= {Balogh, Katalin,  and  Hertog, Eric},
-	booktitle 	= {Videoconference and remote interpreting in criminal proceedings (pp.},
+	booktitle 	= {Videoconference and remote interpreting in criminal proceedings},
 	editor 		= {Braun, Sabine and Taylor, Judith L.},
 	pages 		= {101--116},
 	publisher 	= {University of Surrey},
@@ -263,11 +436,23 @@
 @incollection{Causo2011,
 	author 		= {Causo, José Esteban},
 	year 		= {2011},
-	title 		= {Technical Guidelines for Remonte Interpretation},
+	title 		= {ANNEX - {T}echnical Guidelines for Remote Interpretation},
 	editor 		= {Braun, Sabine and Taylor, Judith L.}, 
 	booktitle 	= {Videoconference and Remote Interpreting in Criminal Proceedings},
 	address 	= {Guilford},
 	publisher 	= {University of Surrey}
+}
+
+@incollection{Causo2011b,
+	author 		= {Causo, José Esteban},
+	year 		= {2011},
+	title 		= {Conference interpreting with information and communication 
+technologies. Experiences from the European Commission DG Interpretation},
+	editor 		= {Braun, Sabine and Taylor, Judith L.}, 
+	booktitle 	= {Videoconference and Remote Interpreting in Criminal Proceedings},
+	address 	= {Guilford},
+	publisher 	= {University of Surrey},
+	pages        = {199--203}
 }
 
 @book{Chernov2004,
@@ -852,7 +1037,7 @@
 	editor 		= {{de Pedro Ricoy}, Raquel and Perez, {Isabelle Anne} and Wilson, Christine},
 	pages 		= {141--155},
 	publisher 	= {St Jerome},
-	title 		= {Court interpreters' self perception: {A} spanish case study},
+	title 		= {Court interpreters' self perception: {A} {S}panish case study},
 	year 		= {2009}
 }
 
@@ -926,7 +1111,7 @@
 	journal 	= {Interpreting},
 	number 		= {1},
 	pages 		= {21–38},
-	title 		= {Videoconferencing: {T}echniques and challanges},
+	title 		= {Videoconferencing: {T}echniques and challenges},
 	volume 		= {1},
 	year	 	= {1996}
 }
@@ -1379,7 +1564,7 @@
 	author 		= {Verdier, Maud and Licoppe, Christian},
 	journal 	= {International Journal of Law, Language \& Discourse},
 	pages 		= {8--36},
-	title 		= {Videoconference in French courtrooms: {I}ts consequences on judicial settings},
+	title 		= {Videoconference in {F}rench courtrooms: {I}ts consequences on judicial settings},
 	volume 		= {1.3},
 	year 		= {2011}
 }
@@ -1442,10 +1627,10 @@
 
 @article{Will2015,
 	author 		= {Will, Martin},
-	journal 	= {Zeitschrift Für Translationswissenschaft Und Fachkommunikation},
+	journal 	= {{Zeitschrift Für Translationswissenschaft Und Fachkommunikation}},
 	number 		= {1},
 	pages 		= {179--201},
-	title 		= {Zur Eignung Simultanfähiger Terminologiesysteme für das Konferenzdolmetschen},
+	title 		= {{Zur Eignung Simultanfähiger Terminologiesysteme für das Konferenzdolmetschen}},
 	volume 		= {8},
 	year 		= {2015}
 }
